--- a/simple_search.html
+++ b/simple_search.html
@@ -4,6 +4,7 @@
         <title>Simple Search Page</title>
     </head>
     <body>
+        <h1>This is Simple Google Search</h1>
         <form action="'https://www.google.com/search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
