--- a/simple_search.html
+++ b/simple_search.html
@@ -26,7 +26,8 @@
                 overflow: hidden;
             }
             .flex-item-70 {
-                flex-basis: 80%;;
+                flex-basis: 80%;
+                background-color: lightgray;
             }
             .flex-item-30 {
                 flex-basis: 20%;
@@ -85,14 +86,11 @@
                 height: 100vh;
                 align-items: center;
             }
-            .form-background {
-                background-color: lightgray;;
-            }
         </style>
     </head>
     <body>
         <div id="container">
-            <div class="form-background flex-item flex-item-70">
+            <div class="flex-item flex-item-70">
                 <form action="https://www.google.com/search">
                     <img id="img" src="https://live.staticflickr.com/3114/2856173673_98ab05e317_b.jpg" alt="Google Image">
                     <input id="input" type="text" name="q" placeholder="Search Google or Type URL">
