--- a/advanced_search.html
+++ b/advanced_search.html
@@ -4,41 +4,52 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Advanced Search Page</title>
+        <link rel="stylesheet" href="mystyle.css">
         <style>
             body {
                 box-sizing: border-box;
-                font-family: Arial, sans-serif;
+                font-family: Arial;
             }
             h2 {
                 color: #d93025;
                 font-size: 20px;
-                margin: 25px 35px;
+                margin: 25px 50px;
             }
             .head-section{
                 border-bottom: 1px solid #ebebeb;
+                text-align: left;
+                align-items: center;
             }
             .row1 {
-                text-align: left;
-                box-sizing: border-box;
-                width: 80%;
-                margin: 5px 20px;
-                border: 1px black solid;
-                height: 42px;
+                display: flex;
+                flex-direction: row;
+                width: 95%;
             }
             .item {
-                display: inline-block;
                 box-sizing: border-box;
-                border: 1px black solid;
                 height: 30px;
-                float: left;
-                margin: 6px 0px;
                 font-size: 13px;
+                margin: 10px;
+                align-content: center;
+                text-align: start;
             }
-            .item-25 {
-                width: 25%;
+            .item-15 {
+                flex-basis: 15%;
+            }
+            .item-35 {
+                flex-basis: 35%;
             }
             .item-50 {
-                width: 50%;
+                flex-basis: 50%;
+                border: 1px solid #d9d9d9;
+                border-top: 1px solid #c0c0c0;
+                box-shadow: 1px;
+            }
+            .space-item{
+                border: none;
+            }
+            .head1 {
+                font-size: 15px;
             }
             .extra-content {
                 font-size: 11px;
@@ -47,11 +58,16 @@
             form {
                 display: flex;
                 flex-direction: column;
-                border: 1px black solid;
                 margin-top: 20px;
+                margin-left: 50px;;
+                width: 75%;
+                align-items: flex-start; 
+                justify-content: flex-start;
             }
             .form-grp-1 {
                 border-bottom: 1px solid #ebebeb;
+                width: 100%;
+                padding: 30px 0px;
             }
         </style>
     </head>
@@ -67,47 +83,47 @@
                 <form action="https://www.google.com/search">
                     <div class="form-grp-1">
                         <div class="form-group">
-                            <div class="row1" style="margin-top: 20px;;">
-                                <div class="item item-25">Find pages with...</div>
-                                <div class="item item-50">&nbsp;</div>
-                                <div class="item item-25">To do this in the search box</div>
+                            <div class="row1">
+                                <div class="item item-15 head1">Find pages with...</div>
+                                <div class="item item-50 space-item">&nbsp;</div>
+                                <div class="item item-35">To do this in the search box</div>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="row1">
-                                <label class="item item-25" for="all-words">all these words:</label>
+                                <label class="item item-15" for="all-words">all these words:</label>
                                 <input class="item item-50" type="text" id="all-words" name="as_q">
-                                <label class="item item-25 extra-content" for="all-words">Type the important words:  tricolor rat terrier</label>
+                                <label class="item item-35 extra-content" for="all-words">Type the important words:  tricolor rat terrier</label>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="row1">
-                                <label class="item item-25" for="exact-phrase">this exact phrase:</label>
+                                <label class="item item-15" for="exact-phrase">this exact phrase:</label>
                                 <input class="item item-50" type="text" id="exact-phrase" name="as_epq">
-                                <label class="item item-25 extra-content" for="exact-phrase">Put exact words in quotes:  "rat terrier"</label>
+                                <label class="item item-35 extra-content" for="exact-phrase">Put exact words in quotes:  "rat terrier"</label>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="row1">
-                                <label class="item item-25" for="any-words">any of these words:</label>
+                                <label class="item item-15" for="any-words">any of these words:</label>
                                 <input class="item item-50" type="text" id="any-words" name="as_oq">
-                                <label class="item item-25 extra-content" for="any-words">Type OR between all the words you want:  miniature OR standard</label>
+                                <label class="item item-35 extra-content" for="any-words">Type OR between all the words you want:  miniature OR standard</label>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="row1">
-                                <label class="item item-25" for="none-words">none of these words:</label>
+                                <label class="item item-15" for="none-words">none of these words:</label>
                                 <input class="item item-50" type="text" id="none-words" name="as_eq">
-                                <label class="item item-25 extra-content" for="none-words">Put a minus sign just before words you don't want:  -rodent, -"Jack Russell"</label>
+                                <label class="item item-35 extra-content" for="none-words">Put a minus sign just before words you don't want:  -rodent, -"Jack Russell"</label>
                             </div>
                         </div>
                     </div>
                     <div class="form-grp-1">
                         <div class="form-group">
                             <div class="row1" style="margin-top: 20px;;">
-                                <div class="item item-25">Find pages with...</div>
+                                <div class="item item-15">Find pages with...</div>
                                 <div class="item item-50">&nbsp;</div>
-                                <div class="item item-25">To do this in the search box</div>
+                                <div class="item item-35">To do this in the search box</div>
                             </div>
                         </div>
                     </div>
