--- a/simple_search.html
+++ b/simple_search.html
@@ -10,7 +10,7 @@
         <div id="flex-container-1">
             <div class="flex-item flex-item-5 flex-container-2">
                 <a href="image_search.html" class="flex-container-2-item">Image Search</a>
-                <a href="#" class="flex-container-2-item">Advanced Search</a>
+                <a href="advanced_search.html" class="flex-container-2-item">Advanced Search</a>
             </div>
             <div class="flex-item flex-item-95">
                 <form action="https://www.google.com/search">
